<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basecolor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/email_logIn"
        android:layout_width="359dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/pass_logIn"
        android:layout_width="361dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_logIn" />

    <Button
        android:id="@+id/btn_Registro"
        android:layout_width="151dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/botones"
        android:text="@string/txtbtn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_logIn"
        app:strokeColor="@color/orillas"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btn_AccesoApp"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtbtn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_logIn"
        android:backgroundTint="@color/botones"
        app:strokeColor="@color/orillas"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/appdevteam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="289dp"
        android:layout_height="276dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoproyecto" />


</androidx.constraintlayout.widget.ConstraintLayout>